--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
+    "formik": "^2.2.9",
+    "mdb-react-ui-kit": "^2.3.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.1",
     "react-dom": "^17.0.2",
